# ai-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml  test.yml
docker/: Dockerfile
notebooks/: 00-notebook.ipynb
scripts/: install.sh
src/core/: __init__.py  env.py
src/package_name/: __init__.py
src/package_name/utils/: imports.py  logger.py
tests/utils/: __init__.py  test_imports.py
